--- a/config/configtx.yaml
+++ b/config/configtx.yaml
@@ -104,73 +104,6 @@ Organizations:
             - Host: peer0.org2.example.com
               Port: 9051
 
-    - &Org3
-        # DefaultOrg defines the organization which is used in the sampleconfig
-        # of the fabric.git development environment
-        Name: Org3MSP
-
-        # ID to load the MSP definition as
-        ID: Org3MSP
-
-        MSPDir: ../artifacts/peerOrganizations/org3.example.com/msp
-
-        # Policies defines the set of policies at this level of the config tree
-        # For organization policies, their canonical path is usually
-        #   /Channel/<Application|Orderer>/<OrgName>/<PolicyName>
-        Policies:
-            Readers:
-                Type: Signature
-                Rule: "OR('Org3MSP.admin', 'Org3MSP.peer', 'Org3MSP.client')"
-            Writers:
-                Type: Signature
-                Rule: "OR('Org3MSP.admin', 'Org3MSP.client')"
-            Admins:
-                Type: Signature
-                Rule: "OR('Org3MSP.admin')"
-            Endorsement:
-                Type: Signature
-                Rule: "OR('Org3MSP.peer')"
-
-        AnchorPeers:
-            # AnchorPeers defines the location of peers which can be used
-            # for cross org gossip communication.  Note, this value is only
-            # encoded in the genesis block in the Application section context
-            - Host: peer0.org3.example.com
-              Port: 10051
-
-    - &Org4
-        # DefaultOrg defines the organization which is used in the sampleconfig
-        # of the fabric.git development environment
-        Name: Org4MSP
-
-        # ID to load the MSP definition as
-        ID: Org4MSP
-
-        MSPDir: ../artifacts/peerOrganizations/org4.example.com/msp
-
-        # Policies defines the set of policies at this level of the config tree
-        # For organization policies, their canonical path is usually
-        #   /Channel/<Application|Orderer>/<OrgName>/<PolicyName>
-        Policies:
-            Readers:
-                Type: Signature
-                Rule: "OR('Org4MSP.admin', 'Org4MSP.peer', 'Org4MSP.client')"
-            Writers:
-                Type: Signature
-                Rule: "OR('Org4MSP.admin', 'Org4MSP.client')"
-            Admins:
-                Type: Signature
-                Rule: "OR('Org4MSP.admin')"
-            Endorsement:
-                Type: Signature
-                Rule: "OR('Org4MSP.peer')"
-
-        AnchorPeers:
-            # AnchorPeers defines the location of peers which can be used
-            # for cross org gossip communication.  Note, this value is only
-            # encoded in the genesis block in the Application section context
-            - Host: peer0.org4.example.com
-              Port: 11051
 
 ################################################################################
 #
@@ -370,12 +303,32 @@ Channel: &ChannelDefaults
 ################################################################################
 Profiles:
 
+    BasicChannel:
+        Consortium: SampleConsortium
+        <<: *ChannelDefaults
+        Application:
+            <<: *ApplicationDefaults
+            Organizations:
+                - *Org1
+                - *Org2
+            Capabilities:
+                <<: *ApplicationCapabilities
+
     OrdererGenesis:
         <<: *ChannelDefaults
         Capabilities:
             <<: *ChannelCapabilities
         Orderer:
             <<: *OrdererDefaults
+            OrdererType: etcdraft
+            EtcdRaft:
+                Consenters:
+                - Host: orderer.example.com
+                  Port: 7050
+                  ClientTLSCert: ../artifacts/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+                  ServerTLSCert: ../artifacts/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+            Addresses:
+                - orderer.example.com:7050
             Organizations:
             - *OrdererOrg
             Capabilities:
@@ -385,18 +338,3 @@ Profiles:
                 Organizations:
                 - *Org1
                 - *Org2
-                - *Org3
-                - *Org4
-
-    BasicChannel:
-        Consortium: SampleConsortium
-        <<: *ChannelDefaults
-        Application:
-            <<: *ApplicationDefaults
-            Organizations:
-                - *Org1
-                - *Org2
-                - *Org3
-                - *Org4
-            Capabilities:
-                <<: *ApplicationCapabilities
